--- a/src/jobs/maven_build_test.yml
+++ b/src/jobs/maven_build_test.yml
@@ -31,6 +31,7 @@ working_directory: ~/project/<< parameters.working_directory >>
 steps:
   - checkout:
       path: ~/project
+  - auth_gke
   - maven_restore_artifacts:
       prefix: << parameters.cache_key_prefix >>
       path: << parameters.path >>
