--- a/src/jobs/maven_build_test.yml
+++ b/src/jobs/maven_build_test.yml
@@ -36,6 +36,7 @@ steps:
       command: |
         curl https://sdk.cloud.google.com > install.sh
         bash install.sh --disable-prompts
+        export PATH=/home/circleci/google-cloud-sdk/bin/:${PATH}
         gcloud components install kubectl
         echo 'export PATH=/home/circleci/google-cloud-sdk/bin/:${PATH}' >> $BASH_ENV
   - auth_gke
