--- a/src/jobs/maven_assert_snapshot_version.yml
+++ b/src/jobs/maven_assert_snapshot_version.yml
@@ -16,6 +16,8 @@ executor: << parameters.executor >>
 
 steps:
   - checkout
+  - install_gcloud
+  - auth_gke
   - maven_auth
   - maven_assert_expression:
       expression: 'project.version'
