--- a/src/jobs/maven_assert_snapshot_version.yml
+++ b/src/jobs/maven_assert_snapshot_version.yml
@@ -11,6 +11,10 @@ parameters:
     description: 'Executor for the build (Either use existing ones: maven_docker, maven_vm or define your own)'
     type: executor
     default: 'maven_docker'
+  maven_credentials:
+    # NOTE that this is the context variable name, not the context variable itself (i.e. ARTIFACTORY_MAVEN_CREDENTIALS, not ${ARTIFACTORY_MAVEN_CREDENTIALS})
+    type: string
+    default: 'ARTIFACTORY_MAVEN_CREDENTIALS'
 
 executor: << parameters.executor >>
 
@@ -18,7 +22,8 @@ steps:
   - checkout
   - install_gcloud
   - auth_gke
-  - maven_auth
+  - maven_auth:
+      maven_credentials: << parameters.maven_credentials >>
   - maven_assert_expression:
       expression: 'project.version'
       pattern: '^.*-SNAPSHOT$'
