Revert "remove gke_auth for maven jobs"
This reverts commit 371b2a32fef50d364c73fc1b0df47bd42a73d776.

--- a/src/commands/install_gcloud.yml
+++ b/src/commands/install_gcloud.yml
@@ -7,4 +7,5 @@ steps:
         curl https://sdk.cloud.google.com > install.sh
         bash install.sh --disable-prompts
         export PATH=/home/circleci/google-cloud-sdk/bin/:${PATH}
+        gcloud components install kubectl
         echo 'export PATH=/home/circleci/google-cloud-sdk/bin/:${PATH}' >> $BASH_ENV
