--- a/src/jobs/maven_build_test.yml
+++ b/src/jobs/maven_build_test.yml
@@ -32,6 +32,7 @@ steps:
   - checkout:
       path: ~/project
   - install_gcloud
+  - auth_gke
   - maven_restore_artifacts:
       prefix: << parameters.cache_key_prefix >>
       path: << parameters.path >>
