--- a/src/jobs/maven_assert_snapshot_version.yml
+++ b/src/jobs/maven_assert_snapshot_version.yml
@@ -21,6 +21,7 @@ executor: << parameters.executor >>
 steps:
   - checkout
   - install_gcloud
+  - auth_gke
   - maven_auth:
       maven_credentials: << parameters.maven_credentials >>
   - maven_assert_expression:
