--- a/src/jobs/maven_deploy_artifact.yml
+++ b/src/jobs/maven_deploy_artifact.yml
@@ -3,6 +3,10 @@ description: >
   Supports monorepo as well as single repo (i.e. one Maven project).
 
 parameters:
+  working_directory:
+    description: 'In which directory to run the steps. Will be interpreted as an absolute path.'
+    type: string
+    default: .
   path:
     description: 'Path of maven module for the app, or "." for single-app-repo'
     type: string
@@ -25,6 +29,7 @@ parameters:
     default: 'ARTIFACTORY_MAVEN_CREDENTIALS'
 
 executor: << parameters.executor >>
+working_directory: ~/project/<< parameters.working_directory >>
 
 steps:
   - checkout
